--- a/back/package.json
+++ b/back/package.json
@@ -1,13 +1,14 @@
 {
-  "type": "module",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
+    "mongoose-unique-validator": "^3.1.0",
     "sequelize": "^6.21.3"
   }
 }
